# Ciel-lang

./: .ciel-format  .clangd  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  PERFORMANCE.md  README.md  REFACTOR.md  alpha-limitations.md  alpha-todo.md  async-await-detailed.md  build.rs  design.md  todo.md
.github/workflows/: linux-ci.yml  macos-ci.yml
editors/vscode-ciel/: README.md  language-configuration.json  package-lock.json  package.json
examples/: enum_switch.ciel  intranet-tunnel-prd.md  smoke.ciel  todo.md
examples/benchmark/intranet_tunnel/stress_tool/: Cargo.toml
examples/benchmark/intranet_tunnel/stress_tool/src/: main.rs
examples/intranet_tunnel/: README.md  agent.ciel  ciel.toml  cli.ciel  error.ciel  main_agent.ciel  main_server.ciel  runtime.ciel  server.ciel
examples/intranet_tunnel_go/: README.md  go.mod
examples/intranet_tunnel_rust/: Cargo.toml  README.md
examples/intranet_tunnel_rust/src/: agent.rs  auth.rs  cli.rs  error.rs  frame.rs  lib.rs  runtime.rs  server.rs  state.rs
libs/sqlite/: CMakeLists.txt  ciel.toml  sqlite.ciel
libs/sqlite/native/: LICENSE-SQLITE.txt  README.vendor.md  sqlite_wrap.c  sqlite_wrap.h
proposal/: README.md  actor-owned-state.md  actor-reactor-effects.md  async-await-todo.md  async-await.md  async-frame-safety-soundness-gaps.md  backend-modernization-roadmap.md  bitwise-operators.md  capability-erased-closures.md  determined-stdlib-capabilities.md  dispatch-actor-io-runtime.md  error-box.md  generic-growable-storage.md  local-type-holes.md  metaprogramming.md  monomorphized-c-callbacks.md  package-runtime-compiler-organization.md  pure-library-message-open-issues.md  receiver-selectors.md  resource-management.md  schema-reflection.md  self-referential-types.md  serde.md  stdlib-baseline-utilities.md  typed-task-errors.md  void-as-unit.md  wire-postponed.md
proposal/done/: actor-owned-state.md  affine-resource-system.md  async-await.md  binding-mutability.md  bitwise-operators.md  capability-erased-closures.md  concurrency.md  derivable-impls.md  dispatch-actor-io-runtime.md  error-box.md  error-downcast.md  error-recovery.md  inferred-capability-types.md  local-type-holes.md  metaprogramming.md  monomorphized-c-callbacks.md  pure-library-message-open-issues.md  pure-library-message.md  receiver-selectors.md  resource-management.md  runtime-future-adapters.md  schema-reflection.md  self-referential-types.md  typed-task-errors.md  unsafe.md  void-as-unit.md
runtime/: CMakeLists.txt
runtime/include/: ciel_actor.h  ciel_async.h  ciel_base.h  ciel_checks.h  ciel_core.h  ciel_gc.h  ciel_io.h  ciel_net.h  ciel_resource.h  ciel_runtime.h
runtime/src/: actor.c  async.c  atomic.c  bytes.c  channel.c  checks.c  core.c  crypto_botan.c  gc.c  internal.h  io.c  net_tcp.c  resource.c
src/: affine.rs  ast.rs  capture.rs  checked.rs  ciel_display.rs  codegen.rs  common.rs  diagnostic.rs  driver.rs  escape.rs  formatter.rs  hir.rs  interfaces.rs  layout.rs  lexer.rs  lib.rs  lsp.rs  main.rs  mono.rs  parser.rs  resolve.rs  retained.rs  runtime_prelude.c  source.rs  span.rs  std_id.rs  suggest.rs  thir.rs  tree_sitter_ciel.rs  type_display.rs  typeck.rs  types.rs
src/codegen/: c_ty.rs  emit.rs  mod.rs  plan.rs  state.rs  stmt.rs
src/lsp/: completion.rs  completion_facts.rs  mod.rs  server.rs
src/thir/: mod.rs  visit.rs
src/typeck/: aggregate.rs  async_check.rs  capability.rs  capability_solve.rs  collect.rs  control_flow.rs  env.rs  functions.rs  helpers.rs  infer.rs  meta_repr.rs  meta_repr_safety.rs  mod.rs
std/: actor.ciel  async.ciel  async_io.ciel  async_net.ciel  async_time.ciel  atomic.ciel  buf.ciel  bytes.ciel  c.ciel  channel.ciel  codec.ciel  crypto.ciel  env.ciel  error.ciel  format.ciel  io.ciel  io_posix.ciel  lib.ciel  map.ciel  message.ciel  meta.ciel  net.ciel  panic.ciel  result.ciel  shared_map.ciel  sync.ciel  text.ciel  time.ciel
std/actor/: actor.ciel  ciel.toml
std/ascii/: ascii.ciel  ciel.toml
std/async/: adapter.ciel  async.ciel  bytes.ciel  ciel.toml  core.ciel
std/async_io/: async_io.ciel  ciel.toml
std/async_net/: async_net.ciel  ciel.toml
std/async_time/: async_time.ciel  ciel.toml
std/atomic/: CMakeLists.txt  atomic.ciel  ciel.toml
std/atomic/include/: ciel_atomic.h
std/atomic/native/: atomic.c
std/base64/: base64.ciel  ciel.toml
std/buf/: buf.ciel  ciel.toml
std/bytes/: bytes.ciel  ciel.toml
std/c/: c.ciel  ciel.toml
std/channel/: channel.ciel  ciel.toml
std/codec/: ciel.toml  codec.ciel
std/crypto/: CMakeLists.txt  ciel.toml  crypto.ciel
std/crypto/include/: ciel_crypto.h
std/crypto/native/: botan.c
std/env/: ciel.toml  env.ciel
std/error/: basic.ciel  ciel.toml  context.ciel  core.ciel  error.ciel
std/format/: ciel.toml  number.ciel
std/io/: ciel.toml  io.ciel
std/io_posix/: ciel.toml  io_posix.ciel
std/iter/: ciel.toml  iter.ciel
std/json/: ciel.toml  json.ciel
std/lib/: ciel.toml  lib.ciel
std/map/: ciel.toml  map.ciel
std/math/: ciel.toml  math.ciel
std/message/: ciel.toml  message.ciel
std/meta/: ciel.toml  meta.ciel
std/net/: ciel.toml  net.ciel
std/option/: ciel.toml  core.ciel  option.ciel
std/ord/: ciel.toml  ord.ciel
std/os/: ciel.toml  fd.ciel
std/panic/: ciel.toml
std/parse/: ciel.toml  parse.ciel
std/pointer/: ciel.toml  pointer.ciel
std/resource/: ciel.toml  core.ciel  resource.ciel
std/result/: ciel.toml  core.ciel  result.ciel
std/shared_map/: ciel.toml  shared_map.ciel
std/sync/: CMakeLists.txt  ciel.toml  sync.ciel
std/sync/include/: ciel_sync.h
std/sync/native/: sync.c
tests/: KNOWN_FAILURES.md  ciel_cases.rs  error_recovery.rs  numeric_constants.rs  tree_sitter_ciel.rs
tree-sitter-ciel/: .clangd  grammar.js  highlights.scm  tree-sitter.json
tutorial/: 01-variables-mutability.md  02-functions-control-flow.md  03-views-slices.md  04-structs-enums.md  05-interfaces-capabilities.md  06-closures.md  07-actor-basics.md  08-actor-envelopes.md  09-channels-async-io.md  10-errors-defer-panic.md  10-errors-panic.md  11-c-interop.md  12-inside-sop.md  13-error-boxes.md  README.md
(+1153 files in other folders)
