[package]
name = "cielc"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
logos = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26.3"
tree-sitter-highlight = "0.26.3"
tree-sitter-language = "0.1.6"
toml = "1.1.2"

[build-dependencies]
cc = "1"
tree-sitter-generate = "0.26.10"

[lib]
name = "cielc"
path = "src/lib.rs"

[[bin]]
name = "cielc"
path = "src/main.rs"

[[bin]]
name = "ciel-lsp"
path = "src/bin/ciel-lsp.rs"
