[package]
name = "intranet_tunnel_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = "0.3.4"
hmac = "0.12.1"
sha2 = "0.10.9"

[lib]
name = "intranet_tunnel_rust"
path = "src/lib.rs"

[[bin]]
name = "tunnel-server"
path = "src/bin/tunnel-server.rs"

[[bin]]
name = "tunnel-agent"
path = "src/bin/tunnel-agent.rs"
