[package]
name = "ciel-tunnel-stress-tool"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "stress-tool"
path = "src/main.rs"

[dependencies]
socket2 = "0.5"
tokio = { version = "1.37", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
